--- a/quoridor.ui
+++ b/quoridor.ui
@@ -1660,6 +1660,11 @@ p, li { white-space: pre-wrap; }
       <height>730</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
     <property name="currentIndex">
      <number>1</number>
     </property>
@@ -2044,6 +2049,7 @@ p, li { white-space: pre-wrap; }
           <widget class="QLabel" name="label">
            <property name="font">
             <font>
+             <pointsize>10</pointsize>
              <bold>true</bold>
             </font>
            </property>
@@ -2056,6 +2062,7 @@ p, li { white-space: pre-wrap; }
           <widget class="QLabel" name="label_3">
            <property name="font">
             <font>
+             <pointsize>10</pointsize>
              <bold>true</bold>
             </font>
            </property>
@@ -2068,6 +2075,7 @@ p, li { white-space: pre-wrap; }
           <widget class="QLabel" name="label_2">
            <property name="font">
             <font>
+             <pointsize>10</pointsize>
              <bold>true</bold>
             </font>
            </property>
@@ -2080,6 +2088,7 @@ p, li { white-space: pre-wrap; }
           <widget class="QLabel" name="label_4">
            <property name="font">
             <font>
+             <pointsize>10</pointsize>
              <bold>true</bold>
             </font>
            </property>
@@ -2092,6 +2101,7 @@ p, li { white-space: pre-wrap; }
           <widget class="QLabel" name="label_5">
            <property name="font">
             <font>
+             <pointsize>10</pointsize>
              <bold>true</bold>
             </font>
            </property>
@@ -2285,7 +2295,7 @@ p, li { white-space: pre-wrap; }
        <rect>
         <x>20</x>
         <y>30</y>
-        <width>340</width>
+        <width>311</width>
         <height>431</height>
        </rect>
       </property>
@@ -2294,9 +2304,12 @@ p, li { white-space: pre-wrap; }
         <pointsize>11</pointsize>
        </font>
       </property>
+      <property name="autoFillBackground">
+       <bool>false</bool>
+      </property>
       <column>
        <property name="text">
-        <string notr="true">Minimax tree output</string>
+        <string notr="true">minimax tree output</string>
        </property>
        <property name="font">
         <font>
@@ -2309,9 +2322,9 @@ p, li { white-space: pre-wrap; }
      <widget class="QTableWidget" name="tableWidget_5">
       <property name="geometry">
        <rect>
-        <x>370</x>
+        <x>340</x>
         <y>30</y>
-        <width>351</width>
+        <width>381</width>
         <height>431</height>
        </rect>
       </property>
@@ -2323,9 +2336,12 @@ p, li { white-space: pre-wrap; }
       <property name="editTriggers">
        <set>QAbstractItemView::NoEditTriggers</set>
       </property>
+      <property name="selectionBehavior">
+       <enum>QAbstractItemView::SelectRows</enum>
+      </property>
       <column>
        <property name="text">
-        <string>Final moves</string>
+        <string>final moves</string>
        </property>
        <property name="font">
         <font>
@@ -2336,7 +2352,7 @@ p, li { white-space: pre-wrap; }
       </column>
       <column>
        <property name="text">
-        <string>RED distance</string>
+        <string>RED dist.</string>
        </property>
        <property name="font">
         <font>
@@ -2347,7 +2363,7 @@ p, li { white-space: pre-wrap; }
       </column>
       <column>
        <property name="text">
-        <string>BLUE distance</string>
+        <string>BLUE dist.</string>
        </property>
        <property name="font">
         <font>
@@ -2358,7 +2374,18 @@ p, li { white-space: pre-wrap; }
       </column>
       <column>
        <property name="text">
-        <string>Diff</string>
+        <string>diff</string>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+         <bold>true</bold>
+        </font>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>root move</string>
        </property>
        <property name="font">
         <font>
@@ -2373,7 +2400,7 @@ p, li { white-space: pre-wrap; }
        <rect>
         <x>20</x>
         <y>600</y>
-        <width>51</width>
+        <width>121</width>
         <height>34</height>
        </rect>
       </property>
@@ -2384,7 +2411,7 @@ p, li { white-space: pre-wrap; }
        </font>
       </property>
       <property name="text">
-       <string>Move:</string>
+       <string>Next RED move:</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_13">
@@ -2447,9 +2474,9 @@ p, li { white-space: pre-wrap; }
      <widget class="QLabel" name="label_18">
       <property name="geometry">
        <rect>
-        <x>70</x>
+        <x>140</x>
         <y>600</y>
-        <width>101</width>
+        <width>61</width>
         <height>34</height>
        </rect>
       </property>
@@ -2542,7 +2569,7 @@ p, li { white-space: pre-wrap; }
      <widget class="QLabel" name="label_16">
       <property name="geometry">
        <rect>
-        <x>80</x>
+        <x>70</x>
         <y>560</y>
         <width>31</width>
         <height>34</height>
@@ -2563,7 +2590,7 @@ p, li { white-space: pre-wrap; }
      <widget class="QLabel" name="label_15">
       <property name="geometry">
        <rect>
-        <x>180</x>
+        <x>170</x>
         <y>519</y>
         <width>31</width>
         <height>35</height>
